Murphy System/outputs/workspace_output_1769406182_7675.txt
  File "<string>", line 15
    if ' in line or " in line:
       ^
SyntaxError: unterminated string literal (detected at line 15)
